[Mac][Material Design] Correct location bar editing text colors.

Currently the Omnibox formats the location bar's text using its normal
formatting rules, which means that if you type a URL the URL will be
white, but if what you're typing doesn't look like a URL it will be
black (which is probably the Omnibox defaulting to not knowing what
to do color-wise). This cl forces the location bar's text to be white
or black while editing in normal or Incognito mode, respectively, per
the Material Design spec.

This cl also cleans up some style mistakes I made in an earlier cl.

R=tapted@chromium.org
BUG=608437

Review-Url: https://codereview.chromium.org/1938243002
Cr-Commit-Position: refs/heads/master@{#391263}

Former-commit-id: c850fd0f9bd765aa5cd9fffd286cdb9f0cd9d2b4